# demo-transaction-banking

./: .gitignore  Dockerfile  Makefile  README_REFACTOR.md  alembic.ini  docker-compose.yml  filebeat.yml  pyproject.toml  seed_accounts.py
alembic/: env.py
alembic/versions/: 4384f76ab4f0_create_qristransaction_table_manually.py  71b1b1b1b1b1_add_pin_accounts_transactions.py  edbd75dcfc79_add_hashed_pin_column_to_users.py  f13ca4f32f5b_add_qristransaction_table.py
app/: auth.py  database.py  database_utils.py  docker-compose.yml  elk_kafka.py  elk_mqtt.py  kafka_create_topic.py  kafka_producer.py  main.py  main_old.py  models.py  mqtt_client.py  schemas.py  security.py
app/api/: deps.py
app/api/v1/: accounts.py  api.py  atm.py  auth.py  auth_old.py  infra.py  transactions.py
app/core/: config.py
app/middleware/: __init__.py  performance_monitor.py
app/seeders/: account_seeder.py
app/services/: atm_service.py  auth_service.py  crash_simulator.py  enhanced_transaction_service.py  foundry_service.py  infra_service.py  location_service.py  pin_validation_service.py  qris_service.py  ticketing_trello_service.py  transaction_recording_service.py  transaction_service.py  transaction_validation_service.py
app/utils/: cities_data.py  pod_namespace.py  qris.py
kibana/config/: kibana.yml
logstash/pipeline/: kafka.conf  logstash.conf  mqtt.conf
